<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/ungu_muda"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/logo_healing"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/round_above"
            android:elevation="10dp">

            <TextView
                android:id="@+id/nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/tl_nik"
                android:textColor="@color/ungu_tua"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/NIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:hint="@string/nik"
                android:inputType="number"
                android:nextFocusDown="@id/Nama"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/abu" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/tl_nama"
                android:textColor="@color/ungu_tua"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/Nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="textPersonName"
                android:textColorHint="@color/abu"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/round_border"
                android:nextFocusDown="@id/textViewJK"/>

            <TextView
                android:id="@+id/textViewJK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jk"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/ungu_tua"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/opsiJK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
            </RadioGroup>

            <TextView
                android:id="@+id/keluhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/keluhan"
                android:textColor="@color/ungu_tua"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <CheckBox
                    android:id="@+id/checkBoxHalu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/halu"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <CheckBox
                    android:id="@+id/checkBoxStress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stres"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <CheckBox
                    android:id="@+id/checkBoxMakan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/makan"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <CheckBox
                    android:id="@+id/checkBoxTidur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tidur"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:layout_marginStart="95dp"
                    android:backgroundTint="@color/ungu_tua"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="120dp"
                    android:text="@string/submit"
                    android:backgroundTint="@color/ungu_tua"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>